fix(cms): enable angular inline scss, import oeb_styles into shadow-dom

--- a/src/app/issuer/components/ai-assistant/ai-assistant.component.html
+++ b/src/app/issuer/components/ai-assistant/ai-assistant.component.html
@@ -1,4 +1,4 @@
-<div class="tw-mt-7 tw-p-12 tw-bg-[#CCD7FF] tw-rounded-md tw-mx-auto tw-relative">
+<div class="tw-text-[14px] tw-mt-7 tw-p-12 tw-bg-[#CCD7FF] tw-rounded-md tw-mx-auto tw-relative">
 	<span class="tw-font-extrabold tw-text-xl tw-uppercase tw-relative"
 		>{{ 'CreateBadge.aiAssistant' | translate }}
 		<img
@@ -6,7 +6,7 @@
 			src="assets/oeb/images/badge/icon-ai-skills.svg"
 		/>
 	</span>
-	<p class="tw-my-2 tw-mb-0 tw-italic tw-text-[var(--color-purple)]">
+	<p class="tw-text tw-my-2 tw-mb-0 tw-italic tw-text-[var(--color-purple)]">
 		{{ 'CreateBadge.NoPersonalInformation' | translate }}
 	</p>
 
