--- a/src/styles/oeb/elements.scss
+++ b/src/styles/oeb/elements.scss
@@ -1,4 +1,4 @@
-@import url('../google-webfonts/rubik.scss');
+@use "../google-webfonts/rubik.scss";
 
 .page-padding {
 	padding-right: calc(var(--gridspacing) * 2);
@@ -169,10 +169,10 @@
 	min-height: 100vh;
 	grid-template-columns: 1fr;
 	grid-template-areas:
-		'nav   '
-		'loader'
-		'main  '
-		'footer';
+		"nav   "
+		"loader"
+		"main  "
+		"footer";
 	grid-template-rows: 100px 6px 1fr auto;
 }
 
