fix: rm space before comma

--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -7,7 +7,8 @@
 				<div class="md:tw-flex tw-justify-between tw-items-center oeb-section-sm">
 					<h2 hlmH2 class="tw-text-oebblack tw-font-bold tw-pb-4 md:tw-pb-0">
 						{{ 'RecBadge.greating' | translate }}
-						<span class="tw-capitalize">{{ profile.firstName }} </span>,
+						<span class="tw-capitalize">{{ profile.firstName }}</span
+						>,
 						{{ 'RecBadge.greating2' | translate }}
 					</h2>
 
