--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -312,7 +312,7 @@
 										[tags]="lp.tags"
 										[slug]="lp.slug"
 										[studyLoad]="calculateStudyLoad(lp)"
-										[completed]="lp.completed_at != null"
+										[completed]="checkCompleted(lp)"
 										[progress]="lp.progress"
 										[requested]="lp.requested"
 										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
@@ -334,7 +334,7 @@
 										[tags]="lp.tags"
 										[slug]="lp.slug"
 										[progress]="lp.progress"
-										[completed]="lp.completed_at != null"
+										[completed]="checkCompleted(lp)"
 										[requested]="lp.requested"
 										[studyLoad]="calculateStudyLoad(lp)"
 										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
@@ -429,73 +429,7 @@
 							</oeb-button>
 						</div>
 
-						<div>
-							<!-- <div class="oeb-section-sm" *ngIf="learningPathsReadyToRequest.length > 0">
-								<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-									{{ 'LearningPath.getYourPath' | translate }}
-								</h3>
-								<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-									<bg-learningpathcard
-										*ngFor="let lp of learningPathsReadyToRequest"
-										[badgeImage]="lp.participationBadge_image"
-										[name]="lp.name"
-										[issuerTitle]="lp.issuer_name"
-										[description]="lp.description"
-										[tags]="lp.tags"
-										[slug]="lp.slug"
-										[studyLoad]="calculateStudyLoad(lp)"
-										[completed]="lp.completed"
-										[progress]="lp.progress"
-										[completed]="lp.completed"
-										[requested]="lp.requested"
-										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-									></bg-learningpathcard>
-								</div>
-							</div> -->
-
-							<!-- <div class="oeb-section-sm" *ngIf="learningPathsInProgress.length > 0">
-								<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-									{{ 'LearningPath.continue' | translate }}
-								</h3>
-								<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-									<bg-learningpathcard
-										*ngFor="let lp of learningPathsInProgress"
-										[badgeImage]="lp.participationBadge_image"
-										[name]="lp.name"
-										[issuerTitle]="lp.issuer_name"
-										[description]="lp.description"
-										[tags]="lp.tags"
-										[slug]="lp.slug"
-										[progress]="lp.progress"
-										[completed]="lp.completed"
-										[requested]="lp.requested"
-										[studyLoad]="calculateStudyLoad(lp)"
-										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-									></bg-learningpathcard>
-								</div>
-							</div> -->
-
-							<!-- <div class="oeb-section-sm" *ngIf="learningPathsCompleted.length > 0">
-								<h3 hlmH3 class="tw-uppercase tw-text-purple tw-font-bold tw-pb-4">
-									{{ 'LearningPath.finished' | translate }}
-								</h3>
-								<div class="tw-grid min-[450px]:tw-grid-cols-learningpathsBackpack tw-gap-6">
-									<bg-learningpathcard
-										*ngFor="let lp of learningPathsCompleted"
-										[badgeImage]="lp.participationBadge_image"
-										[name]="lp.name"
-										[issuerTitle]="lp.issuer_name"
-										[description]="lp.description"
-										[tags]="lp.tags"
-										[slug]="lp.slug"
-										[progress]="lp.progress"
-										[completed]="true"
-										[studyLoad]="calculateStudyLoad(lp)"
-										[matchOrProgress]="{ progress: lp.progress / calculateStudyLoad(lp) }"
-									></bg-learningpathcard>
-								</div>
-							</div> -->
-						</div>
+						<div></div>
 					</ng-template>
 				</ng-template>
 				<ng-template #collectionInfoHeaderTemplate>
