fix(cms): fix some css import errors

--- a/src/styles/oeb/oeb_styles.scss
+++ b/src/styles/oeb/oeb_styles.scss
@@ -344,7 +344,7 @@ html {
 	}
 	&-close {
 		padding-right: 32px;
-		background: transparent url(../../breakdown/static/scss/images/tooltip-close.svg) right 8px center no-repeat;
+		background: transparent url("../../breakdown/static/scss/images/tooltip-close.svg") right 8px center no-repeat;
 		background-size: 12px 12px;
 	}
 	&-delete {
