--- a/src/styles/oeb/oeb_styles.scss
+++ b/src/styles/oeb/oeb_styles.scss
@@ -1,7 +1,7 @@
-@use "./typography.scss";
-@use "./elements.scss";
+@use './typography.scss';
+@use './elements.scss';
 
-@use "@angular/cdk/overlay-prebuilt.css";
+@use '@angular/cdk/overlay-prebuilt.css';
 
 @tailwind base;
 @tailwind components;
@@ -135,7 +135,7 @@ html {
 	--color-link: #1400ff;
 
 	// spartan
-	--font-sans: "";
+	--font-sans: '';
 	--background: 0 0% 100%;
 	--foreground: 240 10% 3.9%;
 	--card: 0 0% 100%;
@@ -223,7 +223,7 @@ html {
 	border-top: none;
 	padding-top: calc(var(--gridspacing) * 12);
 	padding-bottom: calc(var(--gridspacing) * 12);
-	grid-area: "footer";
+	grid-area: 'footer';
 }
 
 .footer [href] {
@@ -273,7 +273,7 @@ html {
 
 .oeb-input-hide-arrows {
 	/* Hide arrows from input number - Firefox */
-	input[type="number"] {
+	input[type='number'] {
 		-moz-appearance: textfield;
 	}
 
@@ -288,7 +288,7 @@ html {
 .oeb-breadcrumbs {
 	margin-bottom: 24px;
 	padding-bottom: 16px;
-	border-bottom: 1px solid theme("colors.grey.85");
+	border-bottom: 1px solid theme('colors.grey.85');
 }
 
 .oeb-max-form-width {
@@ -344,7 +344,7 @@ html {
 	}
 	&-close {
 		padding-right: 32px;
-		background: transparent url("../../breakdown/static/scss/images/tooltip-close.svg") right 8px center no-repeat;
+		background: transparent url('../../breakdown/static/scss/images/tooltip-close.svg') right 8px center no-repeat;
 		background-size: 12px 12px;
 	}
 	&-delete {
