feat: adjust password validation

--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -29,10 +29,11 @@
 							[autofocus]="true"
 							[errorMessage]="{
 								required: enterNewPassword,
-								minlength: mustBe8Char
+								minlength: mustBe8Char,
+								passwordComplexity: passwordInsecure
 							}"
 							[fieldType]="'password'"
-							sublabel="{{ 'Login.mustBe8Char' | translate }}"
+							sublabel="{{ 'Profile.passwordMinRequirements' | translate }}"
 						></oeb-input>
 
 						<oeb-input
