--- a/src/app/profile/components/change-password/change-password.component.html
+++ b/src/app/profile/components/change-password/change-password.component.html
@@ -35,11 +35,12 @@
 					label="{{ 'Profile.newPassword' | translate }}"
 					[errorMessage]="{
 						required: enterYourNewPassword,
-						minlength: mustBe8Char
+						minlength: mustBe8Char,
+						passwordComplexity: passwordInsecure
 					}"
 					[errorOverride]="!!errors['password']"
 					[fieldType]="'password'"
-					sublabel="{{ 'Profile.mustBe8Char' | translate }}"
+					sublabel="{{ 'Profile.passwordMinRequirements' | translate }}"
 					#newPassword_field
 				></oeb-input>
 
@@ -48,7 +49,8 @@
 					label="{{ 'Profile.confirmNewPassword' | translate }}"
 					[errorMessage]="{
 						required: enterNewPasswordConfirmation,
-						minlength: PasswordsDoNotMatch
+						minlength: PasswordsDoNotMatch,
+						passwordComplexity: passwordInsecure
 					}"
 					[fieldType]="'password'"
 					#confirmNewPassword_field
