--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -75,7 +75,7 @@
 								<section class="tw-mb-2">
 									<h3
 										class="tw-text-lg tw-text-oebblack tw-font-semibold"
-										[innerHTML]="'Editor'"
+										[innerHTML]="'Editor:in'"
 									></h3>
 									<p
 										class="tw-text-oebblack tw-text-lg"
