feat: update future skills translation

--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.html
@@ -18,7 +18,9 @@
 	<div class="tw-p-2 visualiser-legend">
 		<span class="visualiser-legend__esco">{{ 'RecBadge.ESCOAreas' | translate }}</span>
 		@if (hasFutureSkills) {
-			<span class="visualiser-legend__future">{{ 'RecBadge.FutureSkillsAccrodingToUlfEhlers' | translate }}</span>
+			<span class="visualiser-legend__future">{{
+				'RecBadge.FutureSkillsAccrodingToNextSkills' | translate
+			}}</span>
 		}
 	</div>
 
