Feat/increase password security (#1481)
* feat: adjust password validation

* feat: new password component

* fix(translations): add missing translations

* fix(translations): provide initial translations for currentLang

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/app/auth/components/new-password/new-password.component.html
+++ b/src/app/auth/components/new-password/new-password.component.html
@@ -8,10 +8,22 @@
 				<oauth-banner></oauth-banner>
 
 				<div class="oeb-headline-container-sm">
-					<h1 hlmH1 class="tw-text-purple">{{ 'Login.resetPassword' | translate }}</h1>
+					<h1 hlmH1 class="tw-text-purple tw-font-black">{{ 'Profile.createNewPassword' | translate }}</h1>
+					<p class="tw-mt-4 tw-flex tw-flex-col tw-gap-4" hlmP>
+						<span class="tw-text-oebblack tw-font-bold tw-text-[22px]">
+							{{ 'Profile.dontPanic' | translate }}</span
+						>
+						<span class="tw-text-oebblack tw-text-lg">
+							<span class="tw-block"> {{ 'Profile.weIncreasedPasswordRequirements' | translate }}</span>
+							<span class="tw-block"> {{ 'Profile.pleaseRenewPassword' | translate }}</span>
+						</span>
+						<span class="tw-text-oebblack tw-text-lg">
+							{{ 'Profile.pleaseRenewPasswordInfo' | translate }}</span
+						>
+					</p>
 				</div>
 
-				<!-- Reset Password Form -->
+				<!-- New Password Form -->
 				<form
 					aria-labelledby="heading-form"
 					[formGroup]="changePasswordForm.rawControl"
@@ -24,8 +36,18 @@
 						<legend class="visuallyhidden" id="heading-forgotpassword">Enter a new password</legend>
 
 						<oeb-input
-							[control]="changePasswordForm.rawControlMap.password1"
-							label="{{ 'Login.newPassword' | translate }}"
+							[control]="changePasswordForm.rawControlMap.current_password"
+							label="{{ 'Profile.currentPassword' | translate }}"
+							[autofocus]="true"
+							errorMessage="{{ 'Profile.enterCurrentPassword' | translate }}"
+							[errorOverride]="!!errors['current_password']"
+							[fieldType]="'password'"
+							#currentPassword_field
+						></oeb-input>
+
+						<oeb-input
+							[control]="changePasswordForm.rawControlMap.password"
+							label="{{ 'Profile.newPassword' | translate }}"
 							[autofocus]="true"
 							[errorMessage]="{
 								required: enterNewPassword,
@@ -38,7 +60,7 @@
 
 						<oeb-input
 							[control]="changePasswordForm.rawControlMap.password2"
-							label="{{ 'Login.confirmNewPassword' | translate }}"
+							label="{{ 'Profile.repeatNewPassword' | translate }}"
 							[errorMessage]="{
 								required: enterNewPasswordConfirmation,
 								passwordsMatch: passwordsDoNotMatch
@@ -58,7 +80,11 @@
 							text="{{ 'General.cancel' | translate }}"
 						></oeb-button>
 
-						<oeb-button type="submit" width="max_content" text="{{ 'Login.changePassword' | translate }}">
+						<oeb-button
+							type="submit"
+							width="max_content"
+							text="{{ 'Profile.saveNewPassword' | translate }}"
+						>
 						</oeb-button>
 					</div>
 				</form>
