--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -484,52 +484,47 @@
 																/>
 																<div class="tw-text-[18px]/[1.3em]">
 																	<h2
+																		[innerHTML]="
+																			'CreateBadge.nothingSuitable' | translate
+																		"
 																		class="tw-uppercase tw-font-bold tw-mb-4 tw-text-[30px]/[1.4em] tw-"
-																	>
-																		Nichts passendes dabei?
-																	</h2>
-																	<p class="tw-italic tw-mb-4">
-																		Probiere es mit einer ausführlicheren
-																		Beschreibung.
-																	</p>
-																	<p>Hier ein paar <strong>Tipps</strong>:</p>
+																	></h2>
+																	<p
+																		class="tw-italic tw-mb-4"
+																		[innerHTML]="
+																			'CreateBadge.tryDetailedDescription'
+																				| translate
+																		"
+																	></p>
+																	<p [innerHTML]="'CreateBadge.tips' | translate"></p>
 																	<ul class="tw-list-disc tw-pl-8">
-																		<li class="tw-list-disc tw-my-1">
-																			Schreibe, was dein Lernangebot
-																			<u>fachlich</u> vermittelt.
-																		</li>
-																		<li class="tw-list-disc tw-my-1">
-																			Beschreibe auch, <u>wie</u> das Lernen
-																			stattfindet.
-																		</li>
-																		<li class="tw-list-disc tw-my-1">
-																			Oft können neben fachlichen Kompetenzen auch
-																			<u>Soft Skills</u> wie soziale,
-																			kommunikative oder
-																			Problemlösungs-Fähigkeiten erworben werden –
-																			bei Teamarbeit, Experimentieren, Planung,
-																			...
-																		</li>
+																		<li
+																			[innerHTML]="
+																				'CreateBadge.subjectMatter' | translate
+																			"
+																			class="tw-list-disc tw-my-1"
+																		></li>
+																		<li
+																			[innerHTML]="
+																				'CreateBadge.howLearningWorks'
+																					| translate
+																			"
+																			class="tw-list-disc tw-my-1"
+																		></li>
+																		<li
+																			[innerHTML]="
+																				'CreateBadge.inAddition' | translate
+																			"
+																			class="tw-list-disc tw-my-1"
+																		></li>
 																	</ul>
 																</div>
 															</div>
 														</div>
-														<p class="tw-italic tw-mt-4">
-															Hinweis: KI-Unterstützung – der Badge-Assistent kann Fehler
-															machen. Überprüfe daher die Vorschläge und melde dich bei
-															fehlerhaften Ergebnissen gerne per
-															<a
-																class="tw-text-[var(--color-link)] tw-underline"
-																href="mailto:support@openbadges.education"
-																>E-Mail</a
-															>.
-															<a
-																class="tw-text-[var(--color-link)] tw-underline"
-																href="https://openbadges.education/public/privacy"
-																target="_blank"
-																>Datenschutz bei OEB</a
-															>.
-														</p>
+														<p
+															class="tw-italic tw-mt-4"
+															[innerHTML]="'CreateBadge.aiAssistantNote' | translate"
+														></p>
 													}
 												</div>
 											}
