--- a/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
+++ b/src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss
@@ -83,41 +83,41 @@
 				stroke: var(--color-purple);
 			}
 			&.level-1 {
-				color: var(--color-purple);
-				circle {
-					fill: var(--color-lightpurple);
-				}
-			}
-			&.level-2 {
-				color: var(--color-purple-950);
-				circle {
-					fill: var(--color-purple-300);
-				}
-			}
-			&.level-3 {
-				color: white;
-				circle {
-					fill: var(--color-purple-600);
-				}
-			}
-			&.level-4,
-			&.leaf {
-				color: white;
+				color: var(--color-white);
 				circle {
 					fill: var(--color-purple);
 				}
 			}
+			&.level-2 {
+				color: var(--color-white);
+				circle {
+					fill: var(--color-purple-600);
+				}
+			}
+			&.level-3 {
+				color: var(--color-black);
+				circle {
+					fill: var(--color-purple-300);
+				}
+			}
+			&.level-4,
+			&.leaf {
+				color: var(--color-black);
+				circle {
+					fill: var(--color-purple-50);
+				}
+			}
 			&.future,
 			&.future-sub {
-				color: var(--color-yellow-900);
+				color: var(--color-black);
 				circle {
-					stroke: var(--color-yellow-900);
-					fill: var(--color-yellow-200);
+					stroke: var(--color-yellow);
+					fill: var(--color-yellow);
 				}
 			}
 			&.future-sub {
 				circle {
-					fill: var(--color-yellow-500);
+					fill: var(--color-yellow-200);
 				}
 			}
 		}
