--- a/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
+++ b/src/app/recipient/components/recipient-earned-badge-list/recipient-earned-badge-list.component.html
@@ -26,11 +26,7 @@
 				</div>
 			</ng-template>
 			<div class="oeb-section-sm">
-				<oeb-backpack-tabs
-					(onTabChanged)="onTabChange($event)"
-					[activeTab]="activeTab"
-					[tabs]="tabs"
-				></oeb-backpack-tabs>
+				<oeb-tabs (onTabChanged)="onTabChange($event)" [activeTab]="activeTab" [tabs]="tabs"></oeb-tabs>
 				<ng-template #profileTemplate>
 					<recipient-skill-visualisation [skills]="allSkills"></recipient-skill-visualisation>
 				</ng-template>
